gradle task run working
no need to download JavaFX anymore + improved folder structure